# GoTools

./: .gitignore  .gitmodules  CMakeLists.txt  CTestCustom.cmake  ChangeLog  Doxyfile  FindSISL.cmake  FindTTL.cmake  INSTALL  README  README-GoTools.txt  TODO  tmp  tmp~
compositemodel/: CMakeLists.txt  Doxyfile
compositemodel/app/: .cvsignore  TestClosestVectors.C  Triang2ParamPoints.C  addVoids.C  approxSurfSet.C  checkRotationalModel.C  createCircArc.C  createEllipticArc.C  createFromIges.C  createFromLine.C  createFromg2.C  create_Body.C  create_Box.C  create_Cylinder.C  create_Sphere.C  curve_tesselate.C  curved_plate_with_holes.C  getAllVertices.C  getCompactSfModels.C  getFeatures.C  getSurfaceBoundaries.C  mirrorSurfaces.C  modelFromIges.C  plate_with_holes.C  plate_with_holes.C~  prepareBlockStructured.C  readg22.C  simplifyLoops.C  simplifyShell.C  splitFace.C  splitFaceSet.C  testClone.C  testClosestPoint.C  testCompositeSurface.C  testSplineTop.C  testSplitModels.C  test_append.C  test_connectTwin.C  test_degenerate.C  test_evaluate.C  (+18 more)
compositemodel/cmake/: GoCompositeModelConfig.cmake.in
compositemodel/data/: ShipFrame.g2  ShipFrame_split.g2  base_mod.g2  base_mod2.g2  base_mod3.g2  base_mod4.g2  base_mod4_2.g2  bilin_hole1_out.g2  bilin_hole2_out.g2  curve_plate_with_holes.g2  curved_plate.g2  curved_plate_split1.g2  curved_plate_with_holes2.g2  curved_plate_with_holes_bd.g2  curved_plate_with_holes_out2.g2  curved_plate_with_holes_out2_sfs.g2  cyl2_2.g2  cyl4.g2  cylinder_hole1_out.g2  cylinder_hole3_out.g2  diamond_hole1_out.g2  diamond_hole2_out.g2  example1.ply~  par_sf.g2  plate_with_holes2.g2  plate_with_holes2_out2_sfs.g2  plate_with_holes2_out3.g2  plate_with_holes2_split.g2  plate_with_holes_1.g2  plate_with_holes_1_out.g2  plate_with_holes_1_out3.g2  plate_with_holes_out.g2  plate_with_holes_out01.g2  plate_with_holes_out01_sfs.g2  plate_with_holes_out02.g2  plate_with_holes_out02_sfs.g2  plate_with_holes_out3.g2  plate_with_holes_out3_sfs.g2  plate_with_holes_out_sfs.g2  s27_plane2.g2  (+4 more)
compositemodel/examples/: createBlockStructuredDisc.C  createSplitDisc.C  createVolumeBoundaries.C  face2splineSet.C  setBdCondandMaterials.C
compositemodel/regression_tests/: testSplitFaceSet.C
compositemodel/src/: AdaptSurface.C  Body.C  CellDivision.C  ClosestPointUtils.C  CompleteEdgeNet.C  CompositeCurve.C  CompositeCurve_intersections.C  CompositeModel.C  CompositeModelFactory.C  CompositeModelFileHandler.C  CurveModel.C  EdgeVertex.C  EvalOffsetSurface.C  EvalOffsetSurfaceSet.C  FaceUtilities.C  HedgeSurface.C  HermiteApprEvalSurf.C  ImplicitApprox.C  IntResultsCompCv.C  IntResultsModel.C  IntResultsSfModel.C  LoftSurfaceCreator.C  Loop.C  ModifyFaceSet.C  OffsetSurfaceUtils.C  Path.C  PointOnEdge.C  PointSetApp.C  PointSetApp.C~  RegularizeFace.C  RegularizeFaceSet.C  RegularizeUtils.C  RevEng.C  RevEngEdge.C  RevEngPoint.C  RevEngRegion.C  RevEngUtils.C  SISLCurveInterface.C  SplitModelUtils.C  SurfaceModel.C  (+22 more)
compositemodel/tests/: test_ftEdge.C
compositemodel/unit_tests/: CMakeLists.txt  plate_with_holes_out2.g2  plate_with_holes_split.g2  testExample.C  testHermiteApprEvalSurf.C  test_ftEdge.C
gotools-core/: CMakeLists.txt  Doxyfile
gotools-core/data/: bounded_line.g2~  bounded_plane.g2~  cv1.g2~  sphere.g2~  surf_rev.g2~
gotools-core/examples/: adapt_curve.C  append_curve.C  approx_curve.C  approx_surface.C  circle.C  closestpoint_curve.C  closestpoint_degenerate_sf.C  closestpoint_surface.C  cone.C  const_param_curves.C  coons_patch_gen.C  cylinder.C  ellipse.C  interpol_curve_free.C  interpol_curve_hermite.C  linear_swept_surface.C  project_curve.C  rotational_swept_surface.C  sphere.C  surface_of_revolution.C  torus.C
gotools-core/gpl/: ChangeLog  INSTALL  INSTRUCTIONS  README  generate_gpl_distro  license_header
gotools-core/test/: testSplineSurface.C
gotools-core/unit_tests/: testBoundedSurface.C  testCurveCreators.C  testGoTools.C  testHermiteApprEvalSurf.C  testSphere.C  testSplineCurve.C  testSplineSurface.C  test_ElementaryObjects.C
igeslib/: CMakeLists.txt  Doxyfile
igeslib/app/: disp2go.C  go2disp.C  go2iges.C  iges2disp.C  iges2disp.pl  iges2go.C  readDispWriteGo.C  readGoWriteIGES.C  readIGESwriteGO.C  readIGESwriteGO_repair.C  testOffsetSurf.C
igeslib/cmake/: GoIgeslibConfig.cmake.in
igeslib/examples/: intersect_with_plane.C
igeslib/src/: IGESconverter.C  dispconverter.C
implicitization/: CMakeLists.txt  Doxyfile  README.txt
implicitization/cmake/: GoImplicitizationConfig.cmake.in
implicitization/examples/: .cvsignore  example_BernsteinMulti.C  example_BernsteinPoly.C  example_BernsteinTetrahedralPoly.C  example_BernsteinTriangularPoly.C  example_BernsteinUtils.C  example_ImplicitizeCurveAlgo.C  example_ImplicitizeCurveAndVectorAlgo.C  example_ImplicitizePointCloudAlgo.C  example_ImplicitizeSurfaceAlgo.C
implicitization/gpl/: ChangeLog  INSTRUCTIONS  README  generate_gpl_distro  license_header
implicitization/src/: BernsteinMulti.C  BernsteinPoly.C  BernsteinTetrahedralPoly.C  BernsteinTriangularPoly.C  BernsteinUtils.C  Binomial.C  ImplicitUtils.C  ImplicitizeCurveAlgo.C  ImplicitizeCurveAndVectorAlgo.C  ImplicitizePointCloudAlgo.C  ImplicitizeSurfaceAlgo.C
intersections/: CMakeLists.txt  Doxyfile
intersections/app/: .cvsignore  makeTestCylinderPlane.C  pickPartSf.C  pickSingularRegion.C  selfIntersectBoundary.C  test_CvAlgcvIntersector.C  test_CvCvIntersector.C  test_Par1FuncIntersector.C  test_Par2FuncIntersector.C  test_SISLsfcv.C  test_SfAlgObjIntersector.C  test_SfAlgsfIntersector.C  test_SfCvIntersector.C  test_SfSelfint.C  test_cone.C  (+7 more)
isogeometric_model/: CMakeLists.txt  Doxyfile
lrsplines2D/: CMakeLists.txt  Doxyfile
lrsplines3D/: CMakeLists.txt  Doxyfile
newmat/: CMakeLists.txt  Doxyfile  README-GoTools.txt
parametrization/: CMakeLists.txt  Doxyfile
qualitymodule/: CMakeLists.txt  Doxyfile  TEST-OLD.txt  TESTS.txt  TODO.txt
topology/: CMakeLists.txt  Doxyfile
trivariate/: CMakeLists.txt  Doxyfile
trivariatemodel/: CMakeLists.txt  Doxyfile
viewlib/: CMakeLists.txt  Doxyfile
(+1858 files in other folders)
